# PlasMol

./: .gitignore  404.html  MANIFEST.in  README.md  create_meep_script.sh  eField.csv  index.html  meepAuSphere.py  pField.csv  pyproject.toml  pyridine.in  pyridine.sbatch  requirements-dev.txt  requirements.txt  search.html  setup.py  submitMeep.sh
.bohr/: bohr.py  csv_handler.py  fock_builder.py  matrix_handler.py
.grok/: config.toml
.src/: cli.py  csv_utils.py  fourier.py  magnus2.py  params.py  plotting.py  propagation.py
PulseTest/: chirpedPulseTest.py
about/: index.html
api-reference/: index.html
bohr/: bohr.py  cli.py  csv_handler.py  driver.py  driverQM.py  fock_builder.py  gif.py  interpolation.py  jk.py  magnus.py  magnus_2nd.py  main.py  matrix_handler.py  molecule.py  molecule_parallel.py  mu.py  plasmol.py  rk4.py  rk4_OLD.py  rttddft.py  simulation.py  sources.py  volume.py
bohr_dev/: __init__.py  bohr.py  driver.py  gif.py  input_parser.py  io_utils.py  meepPlasmon.py  plasmol.py  plasmol2.py  relativistic.py  rttddft_mt.py  simulation.py  sources.py  utils.py  wavefunction.py
contributing/: index.html
doc/: mkdocs.yml
helpers/: chirpedPulseTest.py  create_meep_script.sh  defaults.conf  job_gen.sh  last_run.conf  molecule-template.in  quickPlot.py
installation/: index.html
mcp/: STRATEGY.md  grade.py  h2o.json  inject.py  prompt.md  randomizer.py  server.py  utils.py
merge/: merged.txt
methodology/: index.html
molecule-Files/: h2o.in  h2o.molden  meep-template.in  meep.in  molecule-template.mos  pyridine.molden  pyridine.mos  (+1 more)
(+243 files in other folders)
