[project]
name = "plasmol"
version = "1.1.0"
description = "Hybrid classical/quantum plasmon-molecular simulator"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pillow",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.setuptools]
packages = ["plasmol"]

[tool.setuptools.package-dir]
"" = "."

[project.scripts]
plasmol = "plasmol.main:main"